# light-studio

./: .gitignore
driver/: .gitignore  CMakeLists.txt  main.cpp
driver/driver/: CMakeLists.txt
driver/driver/include/: razerdevice.h  razerkbd_driver.h
driver/driver/src/: razeraccessory_driver.c  razerchromacommon.c  razercommon.c  razerdevice.c  razeregpu_driver.c  razerheadphone_driver.c  razerkbd_driver.c  razerkraken_driver.c  razermouse_driver.c  razermousedock_driver.c  razermousemat_driver.c
driver/util/: CMakeLists.txt
driver/util/include/: log.h  log.hpp
driver/util/src/: log.cpp  util.cpp
studio/: .gitignore  gradle.properties  settings.gradle.kts
studio/application/: build.gradle.kts
studio/application/src/main/kotlin/: Main.kt  menu.kt
